test/files/neg/t6260.check
t6260.scala:3: error: bridge generated for member method apply: (bx: Box[X])Box[Y] in anonymous class $anonfun
which overrides method apply: (v1: T1)R in trait Function1
clashes with definition of the member itself;
both have erased type (v1: Object)Object
    ((bx: Box[X]) => new Box(f(bx.x)))(this)
                  ^
t6260.scala:8: error: bridge generated for member method apply: (bx: Box[X])Box[Y] in anonymous class $anonfun
which overrides method apply: (v1: T1)R in trait Function1
clashes with definition of the member itself;
both have erased type (v1: Object)Object
    ((bx: Box[X]) => new Box(f(bx.x)))(self)
                  ^
two errors found
